force-app/main/default/objects/Propose__c/Propose__c.object-meta.xml
<CustomObject>
    <label>提案</label>
    <nameField>
        <label>提案名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>