force-app/main/default/objects/Propose__c/fields/Anken__c.field-meta.xml
<CustomField>
    <fullName>Anken__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>案件</label>
    <referenceTo>Anken__c</referenceTo>
    <relationshipLabel>提案</relationshipLabel>
    <relationshipName>ProposeToAnken</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>