force-app/main/default/objects/Propose__c/fields/AnkenName__c.field-meta.xml
<CustomField>
    <fullName>AnkenName__c</fullName>
    <formula>Anken__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>案件名</label>
    <type>Text</type>
</CustomField>