force-app/main/default/objects/Propose__c/fields/ContractPeriod__c.field-meta.xml
<CustomField>
    <fullName>ContractPeriod__c</fullName>
    <label>契約期間</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>１か月</fullName>
            </value>
            <value>
                <fullName>３か月</fullName>
            </value>
            <value>
                <fullName>年</fullName>
            </value>
            <value>
                <fullName>一年</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>