force-app/main/default/objects/Propose__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>社員</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>提案</relationshipLabel>
    <relationshipName>ProposeToEmployee</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>