force-app/main/default/objects/Propose__c/fields/EmployeeName__c.field-meta.xml
<CustomField>
    <fullName>EmployeeName__c</fullName>
    <formula>Employee__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>社員名</label>
    <type>Text</type>
</CustomField>