force-app/main/default/objects/Propose__c/fields/MonthPrice__c.field-meta.xml
<CustomField>
    <fullName>MonthPrice__c</fullName>
    <label>提案単価</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>