force-app/main/default/objects/Propose__c/fields/StartDay__c.field-meta.xml
<CustomField>
    <fullName>StartDay__c</fullName>
    <label>開始時間</label>
    <type>Date</type>
</CustomField>